--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: ""
 website: 
-    google-analytics: ""
+    google-analytics: "G-PKMQ2W4ZRC"
 format:
   html:
     code-overflow: wrap
